---- Changes since 1.250 ----
Added a Module Config option for a directory to symlink new virtual host files from, to support the configuration system used by Debian Linux.
Added checkboxes and a button to the module's main page for deleting multiple virtual hosts at once.
---- Changes since 1.270 ----
Added support for new modules and directives in Apache 2.2.0.
Wildcard includes inside <Virtualhost> sections are now supported.
---- Changes since 1.290 ----
Changed default paths on Debian to use Apache 2.
On the Edit Directives page for a virtual host, if multiple files are used (via Include directives), you can now select which one to edit.
---- Changes since 1.300 ----
Added support for IPv6 addresses.
---- Changes since 1.310 ----
Added an access control option to limit alias targets and document roots to a directory.
When upgrading Webmin, the Apache module's list of installed modules is automatically re-detected.
---- Changes since 1.330 ----
Added tabs to break the module's main page down into more readable sections.
Changed all code to use ui-lib.pl functions, for better themeing.
---- Changes since 1.350 ----
On Debian and Ubuntu systems, replaced the existing pages for selecting Apache modules with one that that configures the /etc/apache2/mods-enabled directory, for much simpler and more workable control over modules.
---- Changes since 1.360 ----
Available Apache modules are now fully automatically detected on all operating systems, which does away with the Re-Configure Known Modules page.
---- Changes since 1.400 ----
Moved the SSL password option to the global settings level, to correspond with the way Apache expects it.
---- Changes since 1.410 ----
Added support for the funny ${APACHE_RUN_USER} and ${APACHE_PID_FILE} variables seen in apache2.conf on Ubuntu 8.04.
---- Changes since 1.430 ----
When a virtual host's base directory is changed, all <directory> blocks under it are updated too.